Add collection as a deposit field
